@@ -30,6 +30,7 @@ endif (NO_GETADDRINFO)
 
 if (NOT WIN32)
   add_definitions (-DMINIUPNPC_SET_SOCKET_TIMEOUT)
+  add_definitions (-D_BSD_SOURCE -D_POSIX_C_SOURCE=1)
 else (NOT WIN32)
   add_definitions (-D_WIN32_WINNT=0x0501) # XP or higher for getnameinfo and friends
 endif (NOT WIN32)
@@ -76,6 +77,7 @@ set (MINIUPNPC_SOURCES
   upnperrors.c
   connecthostport.c
   portlistingparse.c
+  receivedata.c
 )
 
 if (NOT WIN32 AND NOT CMAKE_SYSTEM_NAME STREQUAL "AmigaOS")
@@ -136,14 +138,14 @@ if (UPNPC_BUILD_TESTS)
   add_executable (testigddescparse testigddescparse.c
                                    igd_desc_parse.c minixml.c miniupnpc.c miniwget.c minissdpc.c
                                    upnpcommands.c upnpreplyparse.c minisoap.c connecthostport.c
-                                   portlistingparse.c
+                                   portlistingparse.c receivedata.c
   )
   target_link_libraries (testigddescparse ${LDLIBS})
 
   add_executable (testminiwget testminiwget.c
                                miniwget.c miniupnpc.c minisoap.c upnpcommands.c minissdpc.c
                                upnpreplyparse.c minixml.c igd_desc_parse.c connecthostport.c
-                               portlistingparse.c
+                               portlistingparse.c receivedata.c
   )
   target_link_libraries (testminiwget ${LDLIBS})
 
