@@ -1,6 +1,9 @@
 $Id: Changelog.txt,v 1.171 2012/06/20 21:05:56 nanard Exp $
 miniUPnP client Changelog.
 
+2012/06/20:
+  fixed CMakeLists.txt
+
 2012/05/29
   Improvements in testminiwget.sh
 
